--- a/style.css
+++ b/style.css
@@ -1,3 +1,46 @@
-body {
-    background-color: black;
+
+.game--container {
+    border: 2px grey solid;
+    margin-right: auto;
+    margin-left: auto;
+    height: 510px;
+    width: 510px;
+}
+
+.game--btns {
+    height: 500px;
+    width: 500px;
+    display: grid;
+    grid-template-columns: 250px 250px;
+    grid-template-rows: 250px 250px;
+}
+
+.red--btn {
+    border: 2px grey solid;
+    grid-column: 1;
+    grid-row: 1;
+    background-color: red;
+}
+
+.blue--btn {
+    border: 2px grey solid;
+    grid-column: 2;
+    grid-row: 1;
+    background-color: blue;
+}
+
+.green--btn {
+    border: 2px grey solid;
+    height: 100%;
+    grid-column: 1;
+    grid-row: 2;
+    background-color: green;
+}
+
+.yellow--btn {
+    border: 2px grey solid;
+    height: 100%;
+    grid-column: 2;
+    grid-row: 2;
+    background-color: yellow;
 }
