starting game logic

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
     background-color: darkgreen;
 }
 
-#yellowBtn {
+#goldenrodBtn {
     border: 2px grey solid;
     height: 100%;
     grid-column: 2;
