--- a/style.css
+++ b/style.css
@@ -1,47 +1,69 @@
 
 .game--container {
-    border: 2px grey solid;
     margin-right: auto;
     margin-left: auto;
-    height: 510px;
-    width: 510px;
+    margin-top: 100px;
+    max-height: 650px;
+    max-width: 650px;
 }
 
 .game--btn__container {
-    height: 500px;
-    width: 500px;
     display: grid;
-    grid-template-columns: 250px 250px;
-    grid-template-rows: 250px 250px;
+    grid-gap: 15px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin: auto;
+    padding: 10px;
+    height: 550px;
+    width: 550px;
+    border: 4px grey ridge;
+    border-radius: 42%;
+    background-color: black;
 }
 
 #redBtn {
-    border: 2px grey solid;
     grid-column: 1;
     grid-row: 1;
+    border-top-left-radius: 100%;
+    border-top-right-radius: 10%;
+    border-bottom-left-radius: 10%;
+    border-bottom-right-radius: 10%;
+    border: 5px darkred outset;
     background-color: darkred;
 }
 
 #blueBtn {
-    border: 2px grey solid;
     grid-column: 2;
     grid-row: 1;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 100%;
+    border-bottom-left-radius: 10%;
+    border-bottom-right-radius: 10%;
+    border: 5px darkblue outset;
     background-color: darkblue;
 }
 
 #greenBtn {
-    border: 2px grey solid;
     height: 100%;
     grid-column: 1;
     grid-row: 2;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 10%;
+    border-bottom-left-radius: 100%;
+    border-bottom-right-radius: 10%;
+    border: 5px darkgreen outset;
     background-color: darkgreen;
 }
 
 #goldenrodBtn {
-    border: 2px grey solid;
     height: 100%;
     grid-column: 2;
     grid-row: 2;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 10%;
+    border-bottom-left-radius: 10%;
+    border-bottom-right-radius: 100%;
+    border: 5px darkgoldenrod outset;
     background-color: darkgoldenrod;
 }
 
