--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+    background-color: darkgray;
+}
 
 .game--container {
     margin-right: auto;
@@ -75,6 +78,29 @@
     width: 100%;
     height: 100%;
     background-color: rgb(255,255,255,0.3);
+}
+
+.startScreen {
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%; 
+    background-color: white;
+}
+
+.title__container {
+    border: 2px grey solid;
+    height: 500px;
+    width: 500px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .startGame {
