--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ body {
     background-color: black;
 }
 
+.game--btn:active {
+    transform: translateY(4px);
+}
+
 #redBtn {
     grid-column: 1;
     grid-row: 1;
@@ -33,6 +37,11 @@ body {
     border-bottom-right-radius: 10%;
     border: 5px darkred outset;
     background-color: darkred;
+}
+
+#redBtn:active {
+    border: 5px red outset;
+    background-color: red;
 }
 
 #blueBtn {
@@ -46,6 +55,12 @@ body {
     background-color: darkblue;
 }
 
+#blueBtn:active:hover {
+    border: 5px blue outset;
+    background-color: blue;
+}
+
+
 #greenBtn {
     height: 100%;
     grid-column: 1;
@@ -57,6 +72,12 @@ body {
     border: 5px darkgreen outset;
     background-color: darkgreen;
 }
+
+#greenBtn:active {
+    border: 5px green outset;
+    background-color: green;
+}
+
 
 #goldenrodBtn {
     height: 100%;
@@ -70,6 +91,12 @@ body {
     background-color: darkgoldenrod;
 }
 
+#goldenrodBtn:active:hover {
+    border: 5px goldenrod outset;
+    background-color: goldenrod;
+}
+
+
 .antiClick {
     display: none;
     position: fixed;
@@ -77,7 +104,7 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(255,255,255,0.3);
+    background-color: rgb(255,255,255,0);
 }
 
 .startScreen {
