--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body {
 
 .game--style-div {
     margin: auto;
-    height: 650px;
-    width: 575px;
+    height: 665px;
+    width: 580px;
     border: 16px rgb(18, 18, 18) outset;
     border-radius: 30%;
-    background-color: rgb(9, 9, 9);
+    background-color: rgb(15, 15, 15);
 }
 
 .game--btn__container {
@@ -110,7 +110,6 @@ body {
 }
 
 .control--panel {
-    border: 2px grey solid;
     width: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -128,30 +127,44 @@ body {
 .power--btn {
     height: 10px;
     width: 10px;
-    background-color: rgb(151, 151, 151);
+    background: radial-gradient(rgb(170,170,170), rgb(118, 118, 118));
     border-radius: 50%;
     border: 4px darkgray outset;
 }
 
+.power--btn:active {
+    border-style: inset;
+}
+
 .power--txt {
     margin: 0 0 5px 0;
+    font-size: 20px;
+    background-color: rgb(15, 15, 15);
+    color: transparent;
+    text-shadow: .5px .5px .5px rgba(65, 65, 65, 1);
 }
 
 .score--screen {
     height: 25px;
     width: 50px;
+    margin: auto;
     margin-bottom: 5px;
     color: red;
     border: 2px darkred ridge;
     background-color: rgb(84, 0, 0);
+    background-image: url(/img/pyramid.png);
     text-align: center;
     font-size: 22px;
 }
 
 .game--logo {
     margin-top: 10px;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
     text-align: center;
+    font-size: 30px;
+    background-color: rgb(15, 15, 15);
+    color: transparent;
+    text-shadow: .5px .5px .5px rgba(65, 65, 65, 1);
 }
 
 .restart--container {
@@ -164,14 +177,22 @@ body {
 
 .restart--txt {
     margin: 0 0 5px 0;
+    font-size: 20px;
+    background-color: rgb(15, 15, 15);
+    color: transparent;
+    text-shadow: .5px .5px .5px rgba(65, 65, 65, 1);
 }
 
 .restart--btn {
     height: 10px;
     width: 10px;
-    background-color: rgb(151, 151, 151);
+    background: radial-gradient(rgb(170,170,170), rgb(118, 118, 118));
     border-radius: 50%;
     border: 4px darkgray outset;
+}
+
+.restart--btn:active {
+    border-style: inset;
 }
 
 .antiClick {
