--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     border: 16px rgb(18, 18, 18) outset;
     border-radius: 30%;
     background-color: rgb(15, 15, 15);
+    box-shadow: 5px 5px 8px rgb(95, 95, 95);
 }
 
 .game--btn__container {
@@ -50,6 +51,7 @@ body {
     border-bottom-right-radius: 15%;
     border: 5px darkred outset;
     background-color: darkred;
+    box-shadow: inset 0 0 10px black;
 }
 
 #redBtn:active {
@@ -66,6 +68,7 @@ body {
     border-bottom-right-radius: 10%;
     border: 5px darkblue outset;
     background-color: darkblue;
+    box-shadow: inset 0 0 10px black;
 }
 
 #blueBtn:active:hover {
@@ -84,6 +87,7 @@ body {
     border-bottom-right-radius: 10%;
     border: 5px darkgreen outset;
     background-color: darkgreen;
+    box-shadow: inset 0 0 10px black;
 }
 
 #greenBtn:active {
@@ -102,6 +106,7 @@ body {
     border-bottom-right-radius: 100%;
     border: 5px darkgoldenrod outset;
     background-color: darkgoldenrod;
+    box-shadow: inset 0 0 10px black;
 }
 
 #goldenrodBtn:active:hover {
