--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@ body {
     margin: auto;
     height: 665px;
     width: 580px;
-    border: 16px rgb(18, 18, 18) outset;
+    border: 16px rgb(44, 44, 44) outset;
     border-radius: 30%;
-    background-color: rgb(15, 15, 15);
-    box-shadow: 5px 5px 8px rgb(95, 95, 95);
+    background-color: rgb(15, 15, 15); 
+    box-shadow: 8px 15px 8px rgb(95, 95, 95);
+    rotate: 15 1 10 10deg;
 }
 
 .game--btn__container {
@@ -26,10 +27,10 @@ body {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     margin: auto;
-    padding: 10px;
+    padding: 9px 11px 11px 9px;
     height: 550px;
     width: 550px;
-    border: 6px rgb(18, 18, 18) outset;
+    border: 6px rgb(44, 44, 44) outset;
     border-radius: 40%;
     background-color: black;
 }
@@ -51,7 +52,7 @@ body {
     border-bottom-right-radius: 15%;
     border: 5px darkred outset;
     background-color: darkred;
-    box-shadow: inset 0 0 10px black;
+    box-shadow: inset 0 0 100px black;
 }
 
 #redBtn:active {
@@ -68,7 +69,7 @@ body {
     border-bottom-right-radius: 10%;
     border: 5px darkblue outset;
     background-color: darkblue;
-    box-shadow: inset 0 0 10px black;
+    box-shadow: inset 0 0 100px black;
 }
 
 #blueBtn:active:hover {
@@ -87,7 +88,7 @@ body {
     border-bottom-right-radius: 10%;
     border: 5px darkgreen outset;
     background-color: darkgreen;
-    box-shadow: inset 0 0 10px black;
+    box-shadow: inset 0 0 100px black;
 }
 
 #greenBtn:active {
@@ -106,7 +107,7 @@ body {
     border-bottom-right-radius: 100%;
     border: 5px darkgoldenrod outset;
     background-color: darkgoldenrod;
-    box-shadow: inset 0 0 10px black;
+    box-shadow: inset 0 0 100px black;
 }
 
 #goldenrodBtn:active:hover {
@@ -130,11 +131,11 @@ body {
 }
 
 .power--btn {
-    height: 10px;
-    width: 10px;
+    height: 15px;
+    width: 15px;
     background: radial-gradient(rgb(170,170,170), rgb(118, 118, 118));
     border-radius: 50%;
-    border: 4px darkgray outset;
+    border: 2px darkgray outset;
 }
 
 .power--btn:active {
@@ -154,6 +155,9 @@ body {
     width: 50px;
     margin: auto;
     margin-bottom: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: red;
     border: 2px darkred ridge;
     background-color: rgb(84, 0, 0);
@@ -189,11 +193,11 @@ body {
 }
 
 .restart--btn {
-    height: 10px;
-    width: 10px;
+    height: 15px;
+    width: 15px;
     background: radial-gradient(rgb(170,170,170), rgb(118, 118, 118));
     border-radius: 50%;
-    border: 4px darkgray outset;
+    border: 2px darkgray outset;
 }
 
 .restart--btn:active {
@@ -201,13 +205,13 @@ body {
 }
 
 .antiClick {
-    display: none;
-    position: fixed;
-    left: 0;
-    top: 0;
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
+    display: block;
+    padding: 10px;
     width: 100%;
     height: 100%;
-    background-color: rgb(255,255,255,0);
+    background-color: rgb(255,255,255,0.3);
 }
 
 .startScreen {
