--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
     box-shadow: inset 0 0 100px black;
 }
 
-#blueBtn:active:hover {
+#blueBtn:active {
     border: 5px blue outset;
     background-color: blue;
 }
@@ -202,16 +202,6 @@ body {
 
 .restart--btn:active {
     border-style: inset;
-}
-
-.antiClick {
-    grid-column: 1 / span 2;
-    grid-row: 1 / span 2;
-    display: block;
-    padding: 10px;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(255,255,255,0);
 }
 
 .startScreen {
