--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 .game--style-div {
     margin: auto;
-    height: 665px;
+    height: 675px;
     width: 580px;
     border: 16px rgb(44, 44, 44) outset;
     border-radius: 30%;
@@ -118,24 +118,26 @@ body {
 .control--panel {
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     color:white;
 }
 
 .power--container {
+    margin-top: 0;
+    padding-right: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    rotate: 20deg;
-    margin-top: 0;
+    rotate: 27deg;
+    
 }
 
 .power--btn {
     height: 15px;
     width: 15px;
-    background: radial-gradient(rgb(170,170,170), rgb(118, 118, 118));
     border-radius: 50%;
     border: 2px darkgray outset;
+    background: radial-gradient(rgb(170,170,170), rgb(118, 118, 118));
 }
 
 .power--btn:active {
@@ -150,10 +152,17 @@ body {
     text-shadow: .5px .5px .5px rgba(65, 65, 65, 1);
 }
 
+.control--pannel--center {
+    width: 45%;
+    display: flex;
+    justify-content: space-between;
+}
+
 .score--screen {
     height: 25px;
     width: 50px;
     margin: auto;
+    margin-top: 20px;
     margin-bottom: 5px;
     display: flex;
     align-items: center;
@@ -166,22 +175,33 @@ body {
     font-size: 22px;
 }
 
-.game--logo {
-    margin-top: 10px;
-    margin-bottom: 3px;
+.score--txt {
+    margin-top: 0;
     text-align: center;
-    font-size: 30px;
+    font-size: 13px;
     background-color: rgb(15, 15, 15);
     color: transparent;
     text-shadow: .5px .5px .5px rgba(65, 65, 65, 1);
 }
 
+.game--logo {
+    margin-top: 30px;
+    margin-bottom: 0px;
+    text-align: center;
+    font-size: 30px;
+    height: 50px;
+    background-color: rgb(15, 15, 15);
+    color: transparent;
+    text-shadow: 1px 1px rgba(65, 65, 65, 0.5);
+}
+
 .restart--container {
+    rotate: -27deg;
+    margin-top: 0;
+    padding-left: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    rotate: -20deg;
-    margin-top: 0;
 }
 
 .restart--txt {
