--- a/style.css
+++ b/style.css
@@ -175,6 +175,10 @@ body {
     font-size: 22px;
 }
 
+#screen2 {
+    background-position: center;
+}
+
 .score--txt {
     margin-top: 0;
     text-align: center;
@@ -184,12 +188,63 @@ body {
     text-shadow: .5px .5px .5px rgba(65, 65, 65, 1);
 }
 
+.turn--light__container {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.player--light__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.player--light__txt {
+    margin-bottom: 8px;
+    margin-top: 8px;
+    font-size: 13px;
+    background-color: rgb(15, 15, 15);
+    color: transparent;
+    text-shadow: .5px .5px .5px rgba(65, 65, 65, 1);
+}
+
+.player--light {
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    background: radial-gradient(rgb(255, 0, 0), rgb(0, 0, 0));
+}
+
+.comp--light__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.comp--light__txt {
+    margin-bottom: 8px;
+    margin-top: 8px;
+    font-size: 13px;
+    background-color: rgb(15, 15, 15);
+    color: transparent;
+    text-shadow: .5px .5px .5px rgba(65, 65, 65, 1);
+}
+
+.comp--light {
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    background: radial-gradient(rgb(255, 0, 0), rgb(0, 0, 0));
+}
+
 .game--logo {
-    margin-top: 30px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
     text-align: center;
     font-size: 30px;
-    height: 50px;
+    height: 30px;
     background-color: rgb(15, 15, 15);
     color: transparent;
     text-shadow: 1px 1px rgba(65, 65, 65, 0.5);
