--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* font-family: 'Bungee Hairline', cursive;
 font-family: 'Lato', sans-serif;
-font-family: 'Noto Sans Symbols 2', sans-serif;
+font-family: 'Noto Sans Symbols 2', sans-serif;a
 font-family: 'Righteous', cursive; */
 
 
@@ -151,6 +151,7 @@ body {
 .power--txt {
     margin: 0 0 5px 0;
     font-size: 20px;
+    font-family: 'Orbitron', sans-serif;
     color: rgba(95, 95, 95, 0.5);
 }
 
@@ -175,6 +176,7 @@ body {
     background-image: url(/img/pyramid.png);
     text-align: center;
     font-size: 22px;
+    font-family: 'Orbitron', sans-serif;
 }
 
 #screen2 {
@@ -185,7 +187,7 @@ body {
     margin-top: 0;
     text-align: center;
     font-size: 13px;
-    font-family: -webkit-'Noto Sans Symbols 2';
+    font-family: 'Orbitron', sans-serif;
     color: rgba(135, 135, 135, 0.5);
 }
 
@@ -206,6 +208,7 @@ body {
     margin-bottom: 8px;
     margin-top: 8px;
     font-size: 13px;
+    font-family: 'Orbitron', sans-serif;
     color: rgba(135, 135, 135, 0.5);
 }
 
@@ -227,6 +230,7 @@ body {
     margin-bottom: 8px;
     margin-top: 8px;
     font-size: 13px;
+    font-family: 'Orbitron', sans-serif;
     color: rgba(135, 135, 135, 0.5);
 }
 
@@ -243,6 +247,7 @@ body {
     margin-bottom: 0;
     text-align: center;
     font-size: 30px;
+    font-family: 'Righteous', cursive;
     height: 30px;
     color: rgba(65, 65, 65, 0.5);
 }
@@ -259,6 +264,7 @@ body {
 .restart--txt {
     margin: 0 0 5px 0;
     font-size: 20px;
+    font-family: 'Orbitron', sans-serif;
     background-color: rgb(15, 15, 15);
     color: rgba(95, 95, 95, 0.5);
 }
@@ -283,6 +289,7 @@ body {
     width: 100%;
     height: 100%; 
     background-color: white;
+    font-family: 'Righteous', cursive;
 }
 
 .title__container {
