--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-/* font-family: 'Bungee Hairline', cursive;
+/*
+font-family: 'Bungee Hairline', cursive;
 font-family: 'Lato', sans-serif;
 font-family: 'Noto Sans Symbols 2', sans-serif;a
-font-family: 'Righteous', cursive; */
+font-family: 'Righteous', cursive; 
+font-family: 'Orbitron', sans-serif;
+*/
 
 
 
@@ -171,6 +174,7 @@ body {
     align-items: center;
     justify-content: center;
     color: red;
+    text-shadow: 0 0 10px rgba(255, 0, 0, 1);
     border: 2px darkred ridge;
     background-color: rgb(84, 0, 0);
     background-image: url(/img/pyramid.png);
@@ -310,4 +314,9 @@ body {
     border: 2px grey solid;
     height: 20px;
     width: 50px;
+}
+
+.js-light--active {
+    color: rgba(240, 65, 65, 0.5);
+    text-shadow: 0 0 10px rgba(255, 65, 65, 0.5);
 }
