--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
 }
 
 .game--btn {
-    background-image: url(/img/skin-side-up.png);
+    background-image: url(img/skin-side-up.png);
     box-shadow: inset 0 0 100px black;
 }
 
@@ -183,7 +183,7 @@ body {
     text-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
     border: 2px darkred ridge;
     background-color: rgb(84, 0, 0);
-    background-image: url(/img/pyramid.png);
+    background-image: url(img/pyramid.png);
     text-align: center;
     font-size: 22px;
     font-family: 'Orbitron', sans-serif;
