--- a/style.css
+++ b/style.css
@@ -359,7 +359,6 @@ body {
 }
 
 .quit--btn__container {
-    display: flex;
     margin-top: 10px;
     margin-left: 45px;
 }
@@ -372,9 +371,53 @@ body {
     rotate: -2deg;
 }
 
+.js-info--modal__container {
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%; 
+    font-family: 'Righteous', cursive;
+    background: linear-gradient(to bottom right,#282828a1, #000000);
+    z-index: 0;
+}
+
+.info--modal {
+    height: 410px;
+    width: 300px;
+    margin-top: 160px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 12px;
+    padding-right: 12px;
+    border-radius: 30px;
+    border: 8px #282828 outset;
+    background-color: #ffffff50;
+}
+
+.info--modal--close {
+    margin-top: 8px;
+    text-align: right;
+    font-family: 'Orbitron', sans-serif;
+}
+
+.info--modal--title {
+    margin-top: 30px;
+    color: #000000;
+    text-shadow: 1px 1px 5px #20B2AA;
+    text-align: center;
+    font-size: 40px;
+}
+
+.info--modal--content {
+    margin-top: 20px;
+    text-align: center;
+}
+
 .modal--btn {
     width: 20px;
-    margin-left: 50px;
+    margin-left: 7px;
     margin-top: 10px;
     font-size: 30px;
     font-family: 'Bungee Hairline', cursive;
