--- a/style.css
+++ b/style.css
@@ -372,14 +372,14 @@ body {
 }
 
 .js-info--modal__container {
-    display: block;
+    display: none;
     position: fixed;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%; 
     font-family: 'Righteous', cursive;
-    background: linear-gradient(to bottom right,#282828a1, #000000);
+    background: linear-gradient(to bottom right,#1f1f1fb9, #000000);
     z-index: 0;
 }
 
@@ -399,6 +399,7 @@ body {
 .info--modal--close {
     margin-top: 8px;
     text-align: right;
+    cursor: pointer;
     font-family: 'Orbitron', sans-serif;
 }
 
